[gd_scene load_steps=8 format=3 uid="uid://1oraa6ewk255"]

[ext_resource type="Script" path="res://enemy/enemy.gd" id="1_4yhrk"]
[ext_resource type="Script" path="res://enemy/enemy_color_rect.gd" id="2_tgkh4"]
[ext_resource type="Texture2D" uid="uid://b45hv48qu4smn" path="res://assets/ghost.png" id="3_12o6j"]

[sub_resource type="CircleShape2D" id="CircleShape2D_p2e2h"]
radius = 19.9308

[sub_resource type="Theme" id="Theme_abrr0"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_tp4hv"]
bg_color = Color(0.919284, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_6n6ua"]
bg_color = Color(0, 0.517647, 0, 1)

[node name="Enemy" type="Node2D" groups=["enemies"]]
position = Vector2(0, 1)
scale = Vector2(2.76, 2.76)
script = ExtResource("1_4yhrk")

[node name="MouseHitbox" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = -18.5217
offset_top = -19.1739
offset_right = 17.4783
offset_bottom = 17.8261
script = ExtResource("2_tgkh4")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(-0.724638, -0.724638)
scale = Vector2(0.970379, 0.972308)
texture = ExtResource("3_12o6j")

[node name="BulletHitbox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="BulletHitbox"]
position = Vector2(1.08696, -0.362319)
shape = SubResource("CircleShape2D_p2e2h")

[node name="ProgressBar" type="ProgressBar" parent="." groups=["enemies"]]
visible = false
offset_left = -9.78261
offset_top = 15.5797
offset_right = 12.2174
offset_bottom = 19.5797
theme = SubResource("Theme_abrr0")
theme_override_colors/font_color = Color(0.847719, 0, 0.172548, 1)
theme_override_styles/background = SubResource("StyleBoxFlat_tp4hv")
theme_override_styles/fill = SubResource("StyleBoxFlat_6n6ua")
step = 1.0
value = 50.0
show_percentage = false

[node name="PrefText" type="RichTextLabel" parent="."]
offset_left = -9.78261
offset_top = -8.33333
offset_right = 99.2174
offset_bottom = 60.6666
scale = Vector2(0.2, 0.2)
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_font_sizes/normal_font_size = 50
bbcode_enabled = true
text = "HiLo"
fit_content = true
scroll_active = false
autowrap_mode = 0
shortcut_keys_enabled = false

[node name="DescriptionPanel" type="Panel" parent="."]
visible = false
offset_left = -61.2319
offset_top = 25.3623
offset_right = 62.7681
offset_bottom = 99.3623
size_flags_vertical = 2
size_flags_stretch_ratio = 2.51

[node name="DescriptionText" type="RichTextLabel" parent="DescriptionPanel"]
layout_mode = 0
offset_left = 6.0
offset_top = 1.0
offset_right = 630.0
offset_bottom = 382.0
scale = Vector2(0.18, 0.18)
theme_override_font_sizes/normal_font_size = 40
text = "
adadada"
scroll_active = false
autowrap_mode = 2

[connection signal="gui_input" from="MouseHitbox" to="." method="_on_control_gui_input"]
